changed the titles till section to lowercase

--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -8,7 +8,7 @@ To overcome the disadvantages of the available model frameworks, domain specific
 \par
 The following section describes the project goals which aim to solve these problems. Furthermore, the various features of the solution will be described in the section \nameref{sec:vision_for_a_dsl}. After that the priorities of the project goals will be defined.
 
-\section{Project Goals}
+\section{Project goals}
 \par
 The main goal of the project is a feasibility study for a more universal approach to describe environmental models. A domain specific language was proposed as a solution to this need. Although, a plain DSL will not be enough to solve all problems involved in describing an environmental model in such ways that it can be fully described and exchanged without additional information. The following features were defined by Athanasiadis [cite] as necessary for a language or system that allows to fully describe and exchange these environmental models.
 \begin{itemize}
