--- a/05_conclusion.tex
+++ b/05_conclusion.tex
@@ -8,7 +8,7 @@ Environmental modelers are nowadays forced, to implement their models with stand
 The underlying and fundamental issue with this current modeling workflow is, that modelers aren’t able to concentrate on their origin task the modeling, since they don't have tools that allow the implementation in a modeler friendly way. Therefore we outlined, based on the ideas of Athanasiadis and summarized in section \ref{sec:vision_for_a_dsl}, a modeling workflow that makes use of an highly customized IDE. This IDE and the tools it encompasses could bridge the gap of modelers origin intention and the tool support that is needed (see chapter \ref{chap:toolchain} ).
 \par
 After this more overlooking chapter, we have discussed several ways how the very crucial points of this IDE, the DSL and its connection to the ontology, could be solved. To complete things,we want to summarize and discuss our thoughts on the feasibility of the requirements, the ideas mentioned outlining a toolchain and approaches of DSL creation and ontology connection in the following section. After that, we want to give some personal notes to the project procedure itself. 
-\section{Notes on the Feasibility}
+\section{Notes on the feasibility}
 \par
 %TODO refs to chapters (XX)
 If we look back to the requirements explained in the section \ref{sec:vision_for_a_dsl}. The first requirement was to allow the user to semantically describe domain specific data structures. We think that this feature is realisable in principal. In chapter \ref{chap:toolchain} we have already discussed a promising approach how this can be achieved. Neither a more detailed discussion of this point nor an example that proves that the worked out approach is realizable could not be done unfortunately. This is a result of the very short project time and the very rudimentary previous knowledge of the project team.  As mentioned in chapter XX, there are a lot of open questions and open work that need to be done. For example it is necessary to define a stringent structure of the ontologies in order to allow processing by the code generator which is a very difficult, time and resource intensive task. Another possible problem could be the size of the ontology. If we regard that the mentioned NASA SWEET ontology set comprises about 200 different ontologies and it must be possible for users to add their own semantical data type descriptions, it could be a very challenging task to keep the processing fast and reliable. The same problem could be the inverse direction. A model could easily consist of a hundred entities and if all these entities are mapped into the ontology to the reasoning service this could be a very time consuming task, which is barely influenceable since the reasoning functionality is almost implemented in third party libraries.
