refs in conclusion

--- a/05_conclusion.tex
+++ b/05_conclusion.tex
@@ -11,7 +11,7 @@ After this more overlooking chapter, we have discussed several ways how the very
 \section{Notes on the feasibility}
 \par
 %TODO refs to chapters (XX)
-If we look back to the requirements explained in the section \ref{sec:vision_for_a_dsl}. The first requirement was to allow the user to semantically describe domain specific data structures. We think that this feature is realisable in principal. In chapter \ref{chap:toolchain} we have already discussed a promising approach how this can be achieved. Neither a more detailed discussion of this point nor an example that proves that the worked out approach is realizable could not be done unfortunately. This is a result of the very short project time and the very rudimentary previous knowledge of the project team.  As mentioned in chapter XX, there are a lot of open questions and open work that need to be done. For example it is necessary to define a stringent structure of the ontologies in order to allow processing by the code generator which is a very difficult, time and resource intensive task. Another possible problem could be the size of the ontology. If we regard that the mentioned NASA SWEET ontology set comprises about 200 different ontologies and it must be possible for users to add their own semantical data type descriptions, it could be a very challenging task to keep the processing fast and reliable. The same problem could be the inverse direction. A model could easily consist of a hundred entities and if all these entities are mapped into the ontology to the reasoning service this could be a very time consuming task, which is barely influenceable since the reasoning functionality is almost implemented in third party libraries.
+If we look back to the requirements explained in the section \ref{sec:vision_for_a_dsl}. The first requirement was to allow the user to semantically describe domain specific data structures. We think that this feature is realisable in principal. In chapter \ref{chap:toolchain} we have already discussed a promising approach how this can be achieved. Neither a more detailed discussion of this point nor an example that proves that the worked out approach is realizable could be done unfortunately. This is a result of the very short project time and the very rudimentary previous knowledge of the project team.  As aöready mentioned, there are a lot of open questions and open work that need to be done. For example it is necessary to define a stringent structure of the ontologies in order to allow processing by the code generator which is a very difficult, time and resource intensive task. Another possible problem could be the size of the ontology. If we regard that the mentioned NASA SWEET ontology set comprises about 200 different ontologies and it must be possible for users to add their own semantical data type descriptions, it could be a very challenging task to keep the processing fast and reliable. The same problem could be the inverse direction. A model could easily consist of a hundred entities and if all these entities are mapped into the ontology to the reasoning service this could be a very time consuming task, which is barely influenceable since the reasoning functionality is almost implemented in third party libraries.
 \par
 As we have already discussed, the second requirement is rich model interfaces which is in our opinion also feasible and realisable. We came to this conclusion since there are projects that already implement such features (OpenMI) on the one hand and the underlying problem is similar to the service oriented architecture paradigm, where all these problems are already solved, on the other hand. We believe, that the main remaining challenge is, that there is a huge need for standards that are broadly accepted. Only if such standards are developed and used, there is a chance that features like exchanging models or automatically composing them like it can be done with web services can be developed successfully.\\
 A good way how the integration into the DSL, which means the way the user can define the corresponding metadata to the model, could be done is to provide the user with a set of annotations. An example that also uses annotations to describe metadata of the implemented models is the OMS project.
