added the missing titles and some typos

--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -101,7 +101,7 @@ The following order was defined:
 \par
 As a result of the lack of  modelling experience in general and especially the lack of experience with modeling environments it was not possible to implement a DSL that fulfills the above mentioned requirements immediately. The idea was to look at existing modelling frameworks in a first step and afterwards to implement lightweight and easy to understand models with these frameworks to gain experience in modeling on the one hand and to investigate them on strengths and weaknesses on the other hand. Based on this knowledge it should be much easier to define a DSL which integrates the required features. The next chapter gives a rough overview of existing modelling frameworks and examines its strengths and weaknesses regarding the needed features.
 
-\section{Existing Environmental Modelling Frameworks}
+\section{Existing environmental modelling frameworks}
 
 \input{02a_similie}
 \input{02b_esmf}
